@@ -36,9 +36,6 @@ override_dh_auto_install:
 	sed -i 's#/js/jquery-1\.8\.3\.js#/js/jquery.js#' \
 		debian/tmp/etc/munin/templates/partial/head.tmpl
 
-override_dh_install:
-	dh_install --fail-missing
-
 # Override to add several init scripts
 override_dh_installinit:
 	dh_installinit --package=munin-async
@@ -57,3 +54,6 @@ override_dh_installdocs:
 		ln -s /usr/share/javascript/underscore/underscore.js \
 			debian/munin-doc/usr/share/doc/munin-doc/html/_static/underscore.js; \
 	fi
+
+override_dh_missing:
+	dh_missing --fail-missing
